[tool.poetry]
name = "copilot-import"
version = "0.1.0"
description = "Inspired by https://github.com/drathier/stack-overflow-import"
authors = [
    "Mythic <mythicmaniac@gmail.com>",
    "Thijs Molendijk <info@thijsmolendijk.nl>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "copilot" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
